// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should match snapshot when all props provided 1`] = `
<ForwardRef(Button)
  aria-checked={true}
  className="components-menu-item__button my-class"
  icon={
    <SVG
      className="components-menu-items__item-icon"
      height={20}
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <Path
        d="M2 9v2h19V9H2zm0 6h5v-2H2v2zm7 0h5v-2H9v2zm7 0h5v-2h-5v2z"
      />
    </SVG>
  }
  onClick={[Function]}
  role="menuitemcheckbox"
>
  My item
  <Shortcut
    className="components-menu-item__shortcut"
    shortcut="mod+shift+alt+w"
  />
</ForwardRef(Button)>
`;

exports[`MenuItem should match snapshot when info is provided 1`] = `
<ForwardRef(Button)
  className="components-menu-item__button"
  role="menuitem"
>
  <span
    className="components-menu-item__info-wrapper"
  >
    My item
    <span
      className="components-menu-item__info"
    >
      Extended description of My Item
    </span>
  </span>
  <Shortcut
    className="components-menu-item__shortcut"
  />
</ForwardRef(Button)>
`;

exports[`MenuItem should match snapshot when isSelected and role are optionally provided 1`] = `
<ForwardRef(Button)
  className="components-menu-item__button my-class"
  icon={
    <SVG
      className="components-menu-items__item-icon"
      height={20}
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <Path
        d="M2 9v2h19V9H2zm0 6h5v-2H2v2zm7 0h5v-2H9v2zm7 0h5v-2h-5v2z"
      />
    </SVG>
  }
  onClick={[Function]}
  role="menuitem"
>
  My item
  <Shortcut
    className="components-menu-item__shortcut"
    shortcut="mod+shift+alt+w"
  />
</ForwardRef(Button)>
`;

exports[`MenuItem should match snapshot when only label provided 1`] = `
<ForwardRef(Button)
  className="components-menu-item__button"
  role="menuitem"
>
  My item
  <Shortcut
    className="components-menu-item__shortcut"
  />
</ForwardRef(Button)>
`;
